# modular-coevolution

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: sphinx.yml
AlternateGenerators/: EvolutionaryHillClimberGenerator.py  FixedGenerator.py  RandomGenerator.py
AlternateGenotypes/: BinaryGenotype.py  LinearGenotype.py  MultipleGenotype.py  SelfAdaptiveWrapper.py
Diversity/: AlternateDiversity.py
Evolution/: BaseAgent.py  BaseEvolutionWrapper.py  BaseEvolutionaryAgent.py  BaseEvolutionaryGenerator.py  BaseGenotype.py  Coevolution.py  DataCollector.py  EloCoevolution.py  Evolution.py  EvolutionGenerator.py  EvolutionWrapper.py  NSGAIIGenerator.py  README.md  StaticEloCoevolution.py
Evolution/Wrappers/: AlphaRankCoevolution.py  SimilarStrengthCoevolution.py
GeneticProgramming/: GPNode.py  GPTree.py  README.md
Scraps/: elotest.py
alternate_genotypes/: BinaryGenotype.py  GeneticAlgorithm.py  MultipleGenotype.py  SelfAdaptiveWrapper.py
diversity/: AlternateDiversity.py  GPDiversity.py
docs/: requirements.txt
docs/source/: conf.py
documentation/source/: index.rst
modularcoevolution/: README.md
modularcoevolution/agents/: __init__.py  baseagent.py  baseevolutionaryagent.py  basegptreeagent.py  basemultiplegptreeagent.py
modularcoevolution/alternategenerators/: archivegenerator.py  evolutionaryhillclimbergenerator.py  fixedgenerator.py  randomgenerator.py
modularcoevolution/alternategenotypes/: binarygenotype.py  lineargenotype.py  multiplegenotype.py  permutationgenotype.py  selfadaptivewrapper.py
modularcoevolution/diversity/: alternatediversity.py  gpdiversity.py
modularcoevolution/drivers/: __init__.py  coevolutiondriver.py
modularcoevolution/evolution/: __init__.py  baseagent.py  baseevolutionaryagent.py  basegenotype.py  baseobjectivetracker.py  datacollector.py  evaluationfunction.py  specialtypes.py
modularcoevolution/experiments/: baseexperiment.py
modularcoevolution/generators/: __init__.py  archivegenerator.py  baseevolutionarygenerator.py  basegenerator.py  basegenotypegenerator.py  evolutionaryhillclimbergenerator.py  evolutiongenerator.py  fixedgenerator.py  nsgaiigenerator.py  randomgenerator.py  randomgenotypegenerator.py
modularcoevolution/geneticprogramming/: README.md  gpnode.py  gptree.py
modularcoevolution/genotypes/: __init__.py  basegenotype.py  baseobjectivetracker.py  binarygenotype.py  lineargenotype.py  multiplegenotype.py  permutationgenotype.py  (+1 more)
postprocessing/: MasterTournamentRenderer.py
scraps/: EloTest.py  FlowRankingTest.py
(+117 files in other folders)
