[project]
name = "modular-coevolution"
version = "2024.9.24"
description = "Evolutionary algorithm library focusing on competitive coevolution"
authors = [
    {name = "Sean N. Harris", email = "snh0037@auburn.edu"}
]

requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
alpharank = ["open-spiel", "numpy"]
numba = ["numba", "numpy"]
matplotlib = ["matplotlib"]

[project.urls]
Github = "https://github.com/SeanNHarris/modular-coevolution"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modularcoevolution*"]