[project]
name = "modular-coevolution"
version = "2025.3.29"
description = "Evolutionary algorithm library focusing on competitive coevolution and genetic programming"
authors = [
    {name = "Sean N. Harris", email = "snh0037@auburn.edu"}
]

requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Used for AlphaRankCoevolution
alpharank = ["open-spiel", "numpy"]
# Experimental support for Numba compilation on some functions
numba = ["numba", "numpy"]
# Functionality for visualizing GP trees
matplotlib = ["matplotlib"]
# Optional TQDM progress bar
tqdm = ["tqdm"]

[project.urls]
Github = "https://github.com/SeanNHarris/modular-coevolution"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modularcoevolution*"]